Remove -XX:MaxPermSize VM option
Option is Deprecated & Ignored since Java 8, and fully deletd in Java 17.

Bug: 508937338
Test: n/a
Change-Id: I5ca8b8e087c90c36ac329701ab9ca343b34e4584